# fastapi-code-generator

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  swagger.yaml  tox.ini  zensical.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  cli-docs.yml  codeql.yml  codespell.yml  codspeed.yml  config-types.yml  docs-deploy.yml  docs.yml  generated-docs-sync.yml  llms-txt.yml  publish.yml  readme.yml  release-draft.yml  release-notify.yml  schema-docs.yml  test.yml
cli-reference/: index.html
development-contributing/: index.html
docs/: __main.py  __parser.py  __routers.jinja2  cli-reference.md  development-contributing.md  index.md  llms-full.txt  llms.txt  supported_formats.md
fastapi_code_generator/: __init__.py  __main__.py  cli.py  config.py  parser.py  patches.py  prompt_data.py  visitor.py
fastapi_code_generator/_types/: __init__.py  generate_config_dict.py
fastapi_code_generator/modular_template/: dependencies.jinja2  routers.jinja2
fastapi_code_generator/template/: main.jinja2
fastapi_code_generator/visitors/: imports.py  operations.py
here/: main.py
scripts/: build_cli_docs.py  build_config_types.py  build_llms_txt.py  build_prompt_data.py  build_schema_docs.py  build_site.sh  format.bat  format.sh  lint.sh  poetry_test.bat  test.bat  test.sh  update_command_help_on_markdown.py  update_docs_version.py
search/: search_index.json
tests/: conftest.py  simple.yaml  swagger.yaml  test_cli.py  test_config.py  test_generate.py  test_parser.py  test_path_parameter_reused_schema.py  test_prompt_data.py  test_readme.py  test_schema_docs.py
tests/cli_doc/: test_cli_doc_coverage.py  test_cli_options_sync.py
tests/data/custom_template/security/: main.jinja2
tests/data/expected/openapi/body_and_parameters/: main.py  models.py
tests/data/expected/openapi/coverage/callbacks/: main.py  models.py
tests/data/expected/openapi/coverage/callbacks_with_operation_id/: main.py  models.py
tests/data/expected/openapi/coverage/enum_field_as_literal/: models.py
tests/data/expected/openapi/coverage/faux_immutability/: main.py  models.py
tests/data/expected/openapi/coverage/model_options/: custom_models.py  main.py
tests/data/expected/openapi/coverage/non_200_responses/: main.py  models.py
tests/data/expected/openapi/custom_template_security/custom_security/: main.py  models.py
tests/data/expected/openapi/default_template/body_and_parameters/: main.py  models.py
tests/data/expected/openapi/default_template/content_in_parameters/: main.py  models.py
tests/data/expected/openapi/default_template/content_in_parameters_inline/: main.py  models.py
tests/data/expected/openapi/default_template/discriminated_union_simple_type/: main.py  models.py
tests/data/expected/openapi/default_template/discriminator_in_root_with_properties/: main.py  models.py
tests/data/expected/openapi/default_template/duplicate_anonymus_parameter/: main.py  models.py
tests/data/expected/openapi/default_template/duplicate_param/: main.py  models.py
tests/data/expected/openapi/default_template/duplicate_request_param/: main.py  models.py
tests/data/expected/openapi/default_template/modular_reference/: main.py
tests/data/expected/openapi/default_template/no_models/: main.py  models.py
tests/data/expected/openapi/default_template/nullable_test/: models.py
tests/data/expected/openapi/default_template/nullable_test_strict/: main.py  models.py
tests/data/expected/openapi/default_template/oas_response_reference/: main.py  models.py
tests/data/expected/openapi/default_template/path_parameter_component_parameter_schema_reference/: main.py  models.py
tests/data/expected/openapi/default_template/path_parameter_component_parameter_string_schema_reference/: main.py  models.py
tests/data/expected/openapi/default_template/path_parameter_schema_reference/: main.py  models.py
tests/data/expected/openapi/default_template/query_array_parameter/: main.py  models.py
tests/data/expected/openapi/default_template/recursion/: main.py  models.py
tests/data/expected/openapi/default_template/responses_without_schema/: main.py  models.py
tests/data/expected/openapi/default_template/reuse_model/: models.py
tests/data/expected/openapi/default_template/reuse_model_with_reuse/: main.py  models.py
tests/data/expected/openapi/default_template/same_response_model_for_different_status_codes/: main.py  models.py
tests/data/expected/openapi/default_template/shadowed_imports/: main.py  models.py
tests/data/expected/openapi/oas_response_reference/: main.py  models.py
tests/data/expected/openapi/simple/: main.py
tests/data/modular_template/: main.jinja2  routers.jinja2
tests/data/openapi/: body_and_parameters.yaml  oas_response_reference.yaml  simple.yaml
tests/data/openapi/coverage/: callbacks.yaml  callbacks_with_operation_id.yaml  faux_immutability.yaml  non_200_responses.yaml
tests/data/openapi/custom_template_security/: custom_security.yaml
tests/data/openapi/default_template/: body_and_parameters.yaml  content_in_parameters.yaml  content_in_parameters_inline.yaml  discriminated_union_simple_type.yaml  discriminator_in_root_with_properties.yaml  duplicate_anonymus_parameter.yaml  duplicate_param.yaml  duplicate_request_param.yaml  modular_reference.yaml  no_models.yaml  nullable_test.yaml  oas_response_reference.yaml  path_parameter_component_parameter_schema_reference.yaml  path_parameter_component_parameter_string_schema_reference.yaml  path_parameter_schema_reference.yaml  query_array_parameter.yaml  recursion.yaml  responses_without_schema.yaml  reuse_model.yaml  same_response_model_for_different_status_codes.yaml  shadowed_imports.yaml  simple.yaml  upload.yaml
tests/data/openapi/disable_timestamp/: simple.yaml
tests/data/openapi/remote_ref/: body_and_parameters.yaml
tests/data/openapi/using_routers/: using_routers_example.yaml
tests/main/: conftest.py  test_main.py  test_performance.py
(+24 files in other folders)
