[tool.poetry]
name = "fastapi-code-generator"
version = "0.0.1"
description = ""
authors = ["Koudai Aono <koxudaxi@gmail.com>"]
readme = "README.md"
License = "MIT"
homepage = "https://github.com/koxudaxi/fastapi-code-generator"
repository = "https://github.com/koxudaxi/fastapi-code-generator"

classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?$"

[tool.poetry.scripts]
fastapi-codegen = "fastapi_code_generator.__main__:app"

[tool.poetry.dependencies]
python = "^3.8.0"
typer = {extras = ["all"], version =  "^0.2.1"}
datamodel-code-generator = "^0.5.5"
stringcase = "^1.2.0"
black = "19.10b0"
isort = "^4.3.21"
PySnooper = "^0.4.1"
jinja2 = "^2.11.2"
pydantic = "^1.5.1"
#mkdocs = {version = "1.1.2", optional = true}
#mkdocs-material = {version = "5.2.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"

#[tool.poetry.extras]
#docs = ["mkdocs", "mkdocs-material"]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pydantic-pycharm-plugin.parsable-types]
# str field may parse int and float
str = ["int", "float"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

