[tool.poetry]
name = "fastapi-code-generator"
version = "0.0.1"
description = ""
authors = ["Koudai Aono <koxudaxi@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/koxudaxi/fastapi-code-generator"
repository = "https://github.com/koxudaxi/fastapi-code-generator"

classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?$"

[tool.poetry.scripts]
fastapi-codegen = "fastapi_code_generator.__main__:app"

[tool.poetry.dependencies]
python = "^3.8.0"
typer = {extras = ["all"], version = ">=0.2.1,<0.10.0"}
datamodel-code-generator =  {extras = ["http"], version = "0.25.4"}
stringcase = "^1.2.0"
PySnooper = ">=0.4.1,<1.2.0"
jinja2 = ">=2.11.2,<4.0.0"
pydantic = "^2.0.0"
typed-ast = [
    {version = ">=1.5.0", python = ">=3.9.8"},
    {version = ">=1.4.2", python = "<3.9.8"},
]

#mkdocs = {version = "1.1.2", optional = true}
#mkdocs-material = {version = "5.2.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"
freezegun = "^1.2.2"
black = "23.3.0"
isort = "==5.11.4"

#[tool.poetry.extras]

#docs = ["mkdocs", "mkdocs-material"]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
exclude = '(tests/data|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|.*\/models\.py.*|.*\/models\/.*)'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = "tests/data"

[tool.pydantic-pycharm-plugin.parsable-types]
# str field may parse int and float
str = ["int", "float"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

