[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.29.0",
]

[project]
name = "fastapi-code-generator"
description = "Generate a FastAPI app from an OpenAPI file."
readme = "README.md"
license = "MIT"
authors = [{ name = "Koudai Aono", email = "koxudaxi@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
  "datamodel-code-generator[http]>=0.45,<0.46",
  "jinja2>=2.11.2,<4",
  "pydantic>=2.12,<3",
  "pysnooper>=0.4.1,<2",
  "stringcase>=1.2,<2",
  "typer>=0.12,<1",
]

[project.scripts]
fastapi-codegen = "fastapi_code_generator.__main__:app"

[project.urls]
Homepage = "https://github.com/koxudaxi/fastapi-code-generator"
Source = "https://github.com/koxudaxi/fastapi-code-generator"
Documentation = "https://fastapi-code-generator.koxudaxi.dev"

[dependency-groups]
dev = [
  { include-group = "coverage" },
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "pkg-meta" },
  { include-group = "test" },
  { include-group = "type" },
]
docs = [
  "tomli>=2.2.1,<3; python_version<'3.11'",
  "zensical>=0.0.15; python_version>='3.10'",
]
lint = [
  "black==24.10.0",
  "isort==5.13.2",
  "pre-commit>=4,<5",
]
pkg-meta = [
  "check-wheel-contents>=0.6.1",
  "twine>=6.1",
  "uv>=0.9.18",
]
coverage = [
  "coverage[toml]>=7.10",
  "diff-cover>=9.7",
]
test = [
  "inline-snapshot>=0.31",
  "PyYAML>=6",
  "pytest>=8.3",
  "pytest-benchmark>=5",
  "pytest-cov>=7.1.0",
  "pytest-codspeed>=2.2",
  "pytest-mock>=3.14",
  "pytest-xdist>=3.6",
  "time-machine>=2.15",
]
benchmark = [
  "pytest-benchmark>=5",
  "pytest-codspeed>=2.2",
]
type = [
  "mypy>=1.13",
  "types-jinja2>=2.11.9",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fastapi_code_generator/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/fastapi_code_generator",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_code_generator"]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py310"]
exclude = "(tests/data|\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist|.*\\/models\\.py.*|.*\\/models\\/.*)"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = "tests/data"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
  "perf: marks tests as performance tests",
  "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = [
  "fastapi_code_generator/_types/*",
  "fastapi_code_generator/prompt_data.py",
  "tests/main/test_performance.py",
]
source = [
  "fastapi_code_generator",
  "tests",
]

[tool.coverage.paths]
source = [
  "fastapi_code_generator",
  "*/fastapi-code-generator/fastapi_code_generator",
  "*\\fastapi-code-generator\\fastapi_code_generator",
  ".tox*/*/site-packages/fastapi_code_generator",
  ".tox*\\*\\site-packages\\fastapi_code_generator",
]
tests = [
  "tests",
  "*/fastapi-code-generator/tests",
  "*\\fastapi-code-generator\\tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.codespell]
skip = ".git,*.lock,tests,docs/llms.txt,docs/llms-full.txt"

[tool.pydantic-pycharm-plugin.parsable-types]
str = ["int", "float"]
